[project]
name = "minecraft-package-manager"
version = "0.0.1"
description = "A tool for managing minecraft servers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Woodrow Barlow" }]
requires-python = ">=3.8"
dependencies = ["tomlkit>=0.13.3"]

[dependency-groups]

[project.urls]
Repository = "https://github.com/woodrowbarlow/mcpm/"

[project.scripts]
mcpm = "mcpm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpm"]
